* Fix non-expanding streams rows in config setup. * fix icons too small on multi cam view stream selector.

--- a/client/src/app/config-setup/config-setup.component.scss
+++ b/client/src/app/config-setup/config-setup.component.scss
@@ -1,3 +1,7 @@
+table {
+  width: 100%;
+}
+
 tr.detail-row {
   height: 0;
 }
